--- a/index-ar.html
+++ b/index-ar.html
@@ -74,7 +74,7 @@
           <img
             src="./file.svg"
             alt="External Education Logo"
-            class="navbar-logo-svg m-2"
+            class="navbar-logo-svg mx-2"
           />
           <span>اكسترنال</span> اديوكيشن
         </a>
@@ -108,7 +108,7 @@
             </li>
           </ul>
           <!-- Language Switcher -->
-          <a href="index.html" class="btn btn-outline-secondary lang-switcher-btn m-1">English</a>
+          <a href="index.html" class="btn btn-outline-secondary lang-switcher-btn mx-2">English</a>
           <a
             href="https://wa.me/201020255497"
             class="btn btn-primary me-lg-3"
@@ -285,29 +285,26 @@
       </div>
     </section>
 
-  <!-- Testimonials Section -->
+    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
       <div class="container">
         <div class="section-title">
-          <h2 class="text-white">Student Testimonials</h2>
+          <h2 class="text-white">آراء الطلاب</h2>
         </div>
         <div class="testimonials-carousel">
           <div class="testimonials-track" id="testimonialsTrack">
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "External Education made my dream of studying medicine in
-                  Turkey a reality. Their guidance through the entire process
-                  was invaluable. I couldn't have done it without their
-                  support."
+                  "اكسترنال اديوكيشن جعل حلمي في دراسة الطب في تركيا حقيقة. كانت إرشاداتهم خلال العملية برمتها لا تقدر بثمن. لم أكن لأفعل ذلك بدون دعمهم."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Ahmed Mohamed</h5>
-                    <p>Medical Student, Istanbul</p>
+                    <h5>أحمد محمد</h5>
+                    <p>طالب طب، اسطنبول</p>
                   </div>
                 </div>
               </div>
@@ -315,17 +312,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "The team helped me secure a scholarship for engineering in
-                  Libya. I couldn't have done it without their expertise and
-                  support. They were with me every step of the way."
+                  "ساعدني الفريق في الحصول على منحة دراسية للهندسة في ليبيا. لم أكن لأفعل ذلك بدون خبرتهم ودعمهم. كانوا معي في كل خطوة على الطريق."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Mariam Hassan</h5>
-                    <p>Engineering Student, Tripoli</p>
+                    <h5>مريم حسن</h5>
+                    <p>طالبة هندسة، طرابلس</p>
                   </div>
                 </div>
               </div>
@@ -333,17 +328,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "From application to arrival, External Education provided
-                  exceptional service. Their post-arrival support made my
-                  transition smooth and stress-free."
+                  "من التقديم إلى الوصول، قدم اكسترنال اديوكيشن خدمة استثنائية. دعمهم بعد الوصول جعل انتقالي سلسًا وخاليًا من الإجهاد."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Omar Khaled</h5>
-                    <p>Business Student, Ankara</p>
+                    <h5>عمر خالد</h5>
+                    <p>طالب إدارة أعمال، أنقرة</p>
                   </div>
                 </div>
               </div>
@@ -351,17 +344,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "Thanks to External Education, I got accepted into my dream
-                  university in Turkey. Their personalized approach and
-                  attention to detail made all the difference."
+                  "بفضل اكسترنال اديوكيشن، تم قبولي في جامعة أحلامي في تركيا. نهجهم الشخصي واهتمامهم بالتفاصيل أحدث فرقًا كبيرًا."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Fatima Ali</h5>
-                    <p>Psychology Student, Izmir</p>
+                    <h5>فاطمة علي</h5>
+                    <p>طالبة علم نفس، إزمير</p>
                   </div>
                 </div>
               </div>
@@ -369,17 +360,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "The visa process seemed overwhelming, but External
-                  Education's team guided me through every step. Now I'm
-                  studying computer science in Turkey!"
+                  "بدت عملية التأشيرة مربكة، لكن فريق اكسترنال اديوكيشن أرشدني في كل خطوة. الآن أدرس علوم الكمبيوتر في تركيا!"
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Youssef Ibrahim</h5>
-                    <p>Computer Science Student, Istanbul</p>
+                    <h5>يوسف إبراهيم</h5>
+                    <p>طالب علوم حاسب، اسطنبول</p>
                   </div>
                 </div>
               </div>
@@ -387,17 +376,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "I was unsure about studying abroad, but External Education
-                  helped me find the perfect program in Libya. Their support
-                  continues even after arrival."
+                  "كنت غير متأكد من الدراسة في الخارج، لكن اكسترنال اديوكيشن ساعدني في العثور على البرنامج المثالي في ليبيا. يستمر دعمهم حتى بعد الوصول."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Nour Mahmoud</h5>
-                    <p>Architecture Student, Benghazi</p>
+                    <h5>نور محمود</h5>
+                    <p>طالبة هندسة معمارية، بنغازي</p>
                   </div>
                 </div>
               </div>
@@ -406,17 +393,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "External Education's scholarship guidance helped me secure
-                  full funding for my engineering degree in Turkey. Their
-                  expertise made the complex application process simple."
+                  "إرشادات المنح الدراسية من اكسترنال اديوكيشن ساعدتني في تأمين تمويل كامل لشهادتي الهندسية في تركيا. خبرتهم جعلت عملية التقديم المعقدة بسيطة."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Karim Abdelrahman</h5>
-                    <p>Mechanical Engineering Student, Ankara</p>
+                    <h5>كريم عبد الرحمن</h5>
+                    <p>طالب هندسة ميكانيكية، أنقرة</p>
                   </div>
                 </div>
               </div>
@@ -424,17 +409,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "As a female student, I was nervous about studying abroad
-                  alone. External Education provided exceptional support and
-                  helped me find safe accommodation near my university."
+                  "كطالبة، كنت متوترة بشأن الدراسة في الخارج بمفردي. قدمت اكسترنال اديوكيشن دعمًا استثنائيًا وساعدتني في العثور على سكن آمن بالقرب من جامعتي."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Lina Samir</h5>
-                    <p>Pharmacy Student, Istanbul</p>
+                    <h5>لينا سمير</h5>
+                    <p>طالبة صيدلة، اسطنبول</p>
                   </div>
                 </div>
               </div>
@@ -442,17 +425,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "The language support program helped me improve my Turkish
-                  quickly. Within 6 months, I was able to follow lectures
-                  comfortably. Thank you External Education!"
+                  "برنامج دعم اللغة ساعدني على تحسين لغتي التركية بسرعة. في غضون 6 أشهر، تمكنت من متابعة المحاضرات بشكل مريح. شكرًا اكسترنال اديوكيشن!"
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Amr Salah</h5>
-                    <p>Computer Science Student, Izmir</p>
+                    <h5>عمرو صلاح</h5>
+                    <p>طالب علوم حاسب، إزمير</p>
                   </div>
                 </div>
               </div>
@@ -460,17 +441,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "I was rejected by two universities before contacting External
-                  Education. They identified the issues with my applications and
-                  helped me get accepted to a top Libyan university."
+                  "لقد تم رفضي من قبل جامعتين قبل الاتصال بـ اكسترنال اديوكيشن. لقد حددوا المشكلات في طلباتي وساعدوني في الحصول على قبول في إحدى أفضل الجامعات الليبية."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Hassan Mahmoud</h5>
-                    <p>Civil Engineering Student, Tripoli</p>
+                    <h5>حسن محمود</h5>
+                    <p>طالب هندسة مدنية، طرابلس</p>
                   </div>
                 </div>
               </div>
@@ -478,17 +457,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "The pre-departure orientation was incredibly helpful. I knew
-                  exactly what to expect when I arrived in Turkey, which made
-                  the transition much easier."
+                  "كان التوجيه قبل المغادرة مفيدًا بشكل لا يصدق. كنت أعرف بالضبط ما يمكن توقعه عندما وصلت إلى تركيا، مما جعل الانتقال أسهل بكثير."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Dalia Waleed</h5>
-                    <p>Business Administration Student, Istanbul</p>
+                    <h5>داليا وليد</h5>
+                    <p>طالبة إدارة أعمال، اسطنبول</p>
                   </div>
                 </div>
               </div>
@@ -496,17 +473,15 @@
             <div class="testimonial-slide">
               <div class="testimonial-card">
                 <div class="testimonial-content">
-                  "When I had issues with my student residence permit, External
-                  Education's team in Turkey helped resolve everything within
-                  days. Their post-arrival support is unmatched."
+                  "عندما واجهتني مشكلات في تصريح إقامتي كطالب، ساعدني فريق اكسترنال اديوكيشن في تركيا في حل كل شيء في غضون أيام. دعمهم بعد الوصول لا مثيل له."
                 </div>
                 <div class="testimonial-author">
                   <div class="author-img">
                     <i class="fas fa-user"></i>
                   </div>
                   <div>
-                    <h5>Ziad Ashraf</h5>
-                    <p>Medical Student, Ankara</p>
+                    <h5>زياد أشرف</h5>
+                    <p>طالب طب، أنقرة</p>
                   </div>
                 </div>
               </div>
@@ -612,16 +587,11 @@
                 </div>
                 <div>
                   <h5>اتصل بنا</h5>
-                  <div class="row">
-                    <div class="col-6">
-                      <p>+20 102 025 5497</p>
-                      <p>+20 155 267 5518</p>
-                    </div>
-                    <div class="col-6">
-                      <p>+20 115 684 7022</p>
-                      <p>+20 110 431 5622</p>
-                    </div>
-                  </div>
+                  <!-- Single column for phone numbers -->
+                  <p class="mb-1" dir="ltr">٠١٠٢٠٢٥٥٤٩٧</p>
+                  <p class="mb-1" dir="ltr">٠١٥٥٢٦٧٥٥١٨</p>
+                  <p class="mb-1" dir="ltr">٠١١٥٦٨٤٧٠٢٢</p>
+                  <p class="mb-1" dir="ltr">٠١١٠٤٣١٥٦٢٢</p>
                 </div>
               </div>
               <div class="contact-item">
@@ -639,7 +609,7 @@
                 </div>
                 <div>
                   <h5>التسجيل الضريبي</h5>
-                  <p>768-743-044</p>
+                  <p>٧٦٨-٧٤٣-٠٤٤</p>
                 </div>
               </div>
               <div class="contact-item">
@@ -648,7 +618,7 @@
                 </div>
                 <div>
                   <h5>ساعات العمل</h5>
-                  <p>الأحد - الخميس: 9 صباحًا - 5 مساءً</p>
+                  <p>الأحد - الخميس: ٩ صباحًا - ٥ مساءً</p>
                   <p>الجمعة والسبت: مغلق</p>
                 </div>
               </div>
@@ -705,17 +675,17 @@
           <div class="col-lg-3">
             <h5>معلومات الاتصال</h5>
             <p><i class="fas fa-map-marker-alt"></i> الجيزة - الشرقية - الأقصر</p>
-            <p><i class="fas fa-phone-alt"></i> +20 102 025 5497</p>
+            <p><i class="fas fa-phone-alt"></i>٠١٠٢٠٢٥٥٤٩٧</p>
             <p>
               <i class="fas fa-envelope"></i> externaleducation2015@gmail.com
             </p>
             <p>
-              <i class="fas fa-file-invoice-dollar"></i> الرقم الضريبي: 768-743-044
+              <i class="fas fa-file-invoice-dollar"></i> الرقم الضريبي: ٧٦٨-٧٤٣-٠٤٤
             </p>
           </div>
         </div>
         <div class="copyright">
-          <p>&copy; 2024 اكسترنال اديوكيشن. كل الحقوق محفوظة.</p>
+          <p>&copy; ٢٠٢٤ اكسترنال اديوكيشن. كل الحقوق محفوظة.</p>
         </div>
       </div>
     </footer>
