improv meta data for SEO and schema.org structured data

--- a/index-ar.html
+++ b/index-ar.html
@@ -15,13 +15,13 @@
       content="الدراسة بالخارج, الدراسة في تركيا, الدراسة في ليبيا, اكسترنال اديوكيشن, الطلاب المصريين, قبول جامعي, مساعدة في التأشيرة, دراسة الهندسة, دراسة الطب, استشارات تعليمية"
     />
     <meta name="author" content="اكسترنال اديوكيشن" />
-    <link rel="canonical" href="https://www.your-website.com/index-ar.html" /> <!-- Replace with your actual domain -->
+    <link rel="canonical" href="https://extrnal-education.vercel.app/index-ar.html" /> <!-- Replace with your actual domain -->
 
     <!-- Open Graph Meta Tags (for social media sharing) -->
     <meta property="og:title" content="اكسترنال اديوكيشن | الدراسة في تركيا وليبيا للطلاب المصريين" />
     <meta property="og:description" content="دليلك الخبير للطلاب المصريين الراغبين في الدراسة بالخارج. نقدم دعمًا كاملاً في القبول الجامعي وطلبات التأشيرة والمزيد." />
-    <meta property="og:image" content="https://www.your-website.com/path-to-your-hero-image.jpg" /> <!-- Replace with a link to a hero or logo image -->
-    <meta property="og:url" content="https://www.your-website.com/index-ar.html" /> <!-- Replace with your actual domain -->
+    <meta property="og:image" content="https://extrnal-education.vercel.app/file.svg" /> <!-- Replace with a link to a hero or logo image -->
+    <meta property="og:url" content="https://extrnal-education.vercel.app/index-ar.html" /> <!-- Replace with your actual domain -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ar_EG" />
 
@@ -45,8 +45,8 @@
       "@context": "https://schema.org",
       "@type": "EducationalOrganization",
       "name": "اكسترنال اديوكيشن",
-      "url": "https://www.your-website.com/index-ar.html",
-      "logo": "https://www.your-website.com/path-to-your-logo.svg",
+      "url": "https://extrnal-education.vercel.app/index-ar.html",
+      "logo": "https://extrnal-education.vercel.app/file.svg",
       "description": "دليلك الخبير للطلاب المصريين الراغبين في الدراسة بالخارج في تركيا وليبيا. نقدم دعمًا كاملاً في القبول الجامعي وطلبات التأشيرة والإقامة والمزيد.",
       "taxID": "768-743-044",
       "contactPoint": [
