--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       content="study abroad, study in turkey, study in libya, external education, egyptian students, university admission, visa assistance, engineering study, medicine study, education consultancy"
     />
     <meta name="author" content="External Education" />
-    <link rel="canonical" href="https://www.your-website.com/" /> <!-- Replace with your actual domain -->
+    <link rel="canonical" href="https://extrnal-education.vercel.app/" /> <!-- Replace with your actual domain -->
 
     <!-- Open Graph Meta Tags (for social media sharing) -->
     <meta property="og:title" content="External Education | Study in Turkey & Libya for Egyptian Students" />
     <meta property="og:description" content="Your expert guide for Egyptian students seeking to study abroad. We offer full support with university admissions, visa applications, and more." />
-    <meta property="og:image" content="https://www.your-website.com/path-to-your-hero-image.jpg" /> <!-- Replace with a link to a hero or logo image -->
-    <meta property="og:url" content="https://www.your-website.com/" /> <!-- Replace with your actual domain -->
+    <meta property="og:image" content="https://extrnal-education.vercel.app/file.svg" /> <!-- Replace with a link to a hero or logo image -->
+    <meta property="og:url" content="https://extrnal-education.vercel.app/" /> <!-- Replace with your actual domain -->
     <meta property="og:type" content="website" />
 
     <!-- Favicon -->
@@ -44,8 +44,8 @@
       "@context": "https://schema.org",
       "@type": "EducationalOrganization",
       "name": "External Education",
-      "url": "https://www.your-website.com/",
-      "logo": "https://www.your-website.com/path-to-your-logo.svg",
+      "url": "https://extrnal-education.vercel.app/",
+      "logo": "https://extrnal-education.vercel.app/file.svg",
       "description": "Your expert guide for Egyptian students seeking to study abroad in Turkey and Libya. We offer full support with university admissions, visa applications, accommodation, and more.",
       "taxID": "768-743-044",
       "contactPoint": [
