fix the style of the navbar and ensure the mobile menu is functional with larger touch targets

--- a/index-ar.html
+++ b/index-ar.html
@@ -629,67 +629,69 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-0">
-            <h5>اكسترنال اديوكيشن</h5>
-            <p>
-              شريكك الموثوق لفرص التعليم الدولي. نحن نساعد الطلاب المصريين على تحقيق أحلامهم في الدراسة في الخارج.
-            </p>
-            <div class="social-links">
-              <a
-                href="https://www.facebook.com/profile.php?id=100071793811200"
-                target="_blank"
-                class="facebook-icon"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a
-                href="https://www.tiktok.com/@externaleducation?_t=ZS-8umyVGogzIe&_r=1"
-                target="_blank"
-                class="tiktok-icon"
-                ><i class="fab fa-tiktok"></i
-              ></a>
-            </div>
-          </div>
-          <div class="col-lg-2 mb-4 mb-lg-0">
-            <h5>روابط سريعة</h5>
-            <ul class="footer-links">
-              <li><a href="#home">الرئيسية</a></li>
-              <li><a href="#about">من نحن</a></li>
-              <li><a href="#services">خدماتنا</a></li>
-              <li><a href="#testimonials">آراء الطلاب</a></li>
-              <li><a href="#contact">اتصل بنا</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3 mb-4 mb-lg-0">
-            <h5>خدماتنا</h5>
-            <ul class="footer-links">
-              <li><a href="#">القبول الجامعي</a></li>
-              <li><a href="#">المساعدة في التأشيرة</a></li>
-              <li><a href="#">الإقامة</a></li>
-              <li><a href="#">دعم اللغة</a></li>
-              <li><a href="#">إرشادات المنح الدراسية</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3">
-            <h5>معلومات الاتصال</h5>
-            <p><i class="fas fa-map-marker-alt"></i> الجيزة - الشرقية - الأقصر</p>
-            <p><i class="fas fa-phone-alt"></i>٠١٠٢٠٢٥٥٤٩٧</p>
-            <p>
-              <i class="fas fa-envelope"></i> externaleducation2015@gmail.com
-            </p>
-            <p>
-              <i class="fas fa-file-invoice-dollar"></i> الرقم الضريبي: ٧٦٨-٧٤٣-٠٤٤
-            </p>
-          </div>
-        </div>
-        <div class="copyright">
-          <p>&copy; ٢٠٢٤ اكسترنال اديوكيشن. كل الحقوق محفوظة.</p>
+ <footer class="footer">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-4 mb-4">
+        <h5>اكسترنال اديوكيشن</h5>
+        <p>
+          شريكك الموثوق لفرص التعليم الدولي. نحن نساعد الطلاب المصريين على تحقيق أحلامهم في الدراسة في الخارج.
+        </p>
+        <div class="social-links d-flex justify-content-center justify-content-md-start">
+          <a
+            href="https://www.facebook.com/profile.php?id=100071793811200"
+            target="_blank"
+            class="facebook-icon"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a
+            href="https://www.tiktok.com/@externaleducation?_t=ZS-8umyVGogzIe&_r=1"
+            target="_blank"
+            class="tiktok-icon"
+            ><i class="fab fa-tiktok"></i
+          ></a>
         </div>
       </div>
-    </footer>
 
+      <div class="col-md-2 mb-4">
+        <h5>روابط سريعة</h5>
+        <ul class="footer-links">
+          <li><a href="#home">الرئيسية</a></li>
+          <li><a href="#about">من نحن</a></li>
+          <li><a href="#services">خدماتنا</a></li>
+          <li><a href="#testimonials">آراء الطلاب</a></li>
+          <li><a href="#contact">اتصل بنا</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-3 mb-4">
+        <h5>خدماتنا</h5>
+        <ul class="footer-links">
+          <li><a href="#services">القبول الجامعي</a></li>
+          <li><a href="#services">المساعدة في التأشيرة</a></li>
+          <li><a href="#services">الإقامة</a></li>
+          <li><a href="#services">دعم اللغة</a></li>
+          <li><a href="#services">إرشادات المنح الدراسية</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-3 mb-4">
+        <h5>معلومات الاتصال</h5>
+        <ul class="footer-links">
+            <li><i class="fas fa-map-marker-alt ms-2"></i>الجيزة - الشرقية - الأقصر</li>
+            <li><i class="fas fa-phone-alt ms-2"></i>٠١٠٢٠٢٥٥٤٩٧</li>
+            <li><i class="fas fa-envelope ms-2"></i>externaleducation2015@gmail.com</li>
+            <li><i class="fas fa-file-invoice-dollar ms-2"></i>الرقم الضريبي: ٧٦٨-٧٤٣-٠٤٤</li>
+        </ul>
+      </div>
+
+    </div>
+    <div class="copyright">
+      <p>&copy; ٢٠٢٤ اكسترنال اديوكيشن. كل الحقوق محفوظة.</p>
+    </div>
+  </div>
+</footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
