--- a/index.html
+++ b/index.html
@@ -61,17 +61,44 @@
 
 <body>
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-    <div class="container">
-      <div class="navbar-brand d-flex align-items-center">
-        <img src="./file.svg" alt="External Education Logo" class="navbar-logo-svg mx-2" />
-        External <span>Education</span>
+<nav class="navbar navbar-expand-lg navbar-light sticky-top">
+  <div class="container">
+    <a class="navbar-brand " href="#">
+      <img
+        src="./file.svg"
+        alt="External Education Logo"
+        class="navbar-logo-svg mx-2"
+      />
+      External <span>Education</span>
+    </a>
+
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div
+      class="offcanvas offcanvas-end"
+      tabindex="-1"
+      id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+      <div class="offcanvas-body">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" href="#home">Home</a>
           </li>
@@ -91,12 +118,19 @@
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
-        <!-- Language Switcher -->
-        <a href="index-ar.html" class="btn btn-outline-secondary lang-switcher-btn m-1">العربية</a>
-        <a href="https://wa.me/201020255497" class="btn btn-primary ms-lg-3" target="_blank">Apply Now</a>
+        <div class="d-flex flex-column flex-lg-row align-items-center">
+            <a href="index-ar.html" class="btn btn-outline-secondary lang-switcher-btn">العربية</a>
+            <a
+              href="https://wa.me/201020255497"
+              class="btn btn-primary ms-lg-3 mt-2 mt-lg-0"
+              target="_blank"
+              >Apply Now</a
+            >
+        </div>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Hero Section -->
   <section class="hero" id="home">
