--- a/index-ar.html
+++ b/index-ar.html
@@ -69,7 +69,7 @@
   <body>
     <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <div class="container flex-row" >
+  <div class="container mx-5 justify-content-between" >
     <a class="navbar-brand d-flex align-items-center ms-5" href="#">
       <img
         src="./file.svg"
