--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
   <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-  <div class="container">
+  <div class="container mx-5 justify-content-between">
     <a class="navbar-brand " href="#">
       <img
         src="./file.svg"
