--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light sticky-top">
   <div class="container">
-    <a class="navbar-brand " href="#">
+   <a class="navbar-brand d-flex align-items-center ms-lg-5" href="#">
       <img
         src="./file.svg"
         alt="External Education Logo"
