--- a/index-ar.html
+++ b/index-ar.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>اكسترنال اديوكيشن | الدراسة في تركيا وليبيا للطلاب المصريين</title>
     <meta
       name="description"
@@ -35,7 +36,9 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ar_EG" />
+
     <link rel="icon" href="./file.svg" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,6 +48,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -52,12 +56,27 @@
         "name": "اكسترنال اديوكيشن",
         "url": "https://extrnal-education.vercel.app/index-ar.html",
         "logo": "https://extrnal-education.vercel.app/file.svg",
-        "description": "دليلك الخبير للطلاب المصريين الراغبين في الدراسة بالخارج في تركيا وليبيا.",
+        "description": "دليلك الخبير للطلاب المصريين الراغبين في الدراسة بالخارج في تركيا وليبيا. نقدم دعمًا كاملاً في القبول الجامعي وطلبات التأشيرة والإقامة والمزيد.",
         "taxID": "768-743-044",
         "contactPoint": [
           {
             "@type": "ContactPoint",
             "telephone": "+20-102-025-5497",
+            "contactType": "customer service"
+          },
+          {
+            "@type": "ContactPoint",
+            "telephone": "+20-155-267-5518",
+            "contactType": "customer service"
+          },
+          {
+            "@type": "ContactPoint",
+            "telephone": "+20-115-684-7022",
+            "contactType": "customer service"
+          },
+          {
+            "@type": "ContactPoint",
+            "telephone": "+20-110-431-5622",
             "contactType": "customer service"
           }
         ],
@@ -65,6 +84,16 @@
           {
             "@type": "PostalAddress",
             "addressLocality": "Giza",
+            "addressCountry": "EG"
+          },
+          {
+            "@type": "PostalAddress",
+            "addressLocality": "Sharqia",
+            "addressCountry": "EG"
+          },
+          {
+            "@type": "PostalAddress",
+            "addressLocality": "Luxor",
             "addressCountry": "EG"
           }
         ],
@@ -75,6 +104,7 @@
       }
     </script>
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light sticky-top">
       <div class="container">
@@ -153,7 +183,7 @@
       <div class="container">
         <div class="hero-content">
           <h1>الدراسة في الخارج بثقة</h1>
-          <p>شريكك الموثوق لمتابعة التعليم العالي في تركيا وليبيا وخارجها.</p>
+          <p>شريكك الموثوق لمتابعة التعليم العالي في تركيا وليبيا وخارجها</p>
           <div
             class="mt-4 d-flex flex-column flex-sm-row justify-content-center"
           >
@@ -186,7 +216,9 @@
           </div>
           <div class="col-md-4">
             <div class="service-card">
-              <div class="service-icon"><i class="fas fa-passport"></i></div>
+              <div class="service-icon">
+                <i class="fas fa-passport"></i>
+              </div>
               <h3>المساعدة في التأشيرة</h3>
               <p>
                 إرشادات مهنية خلال عملية طلب التأشيرة بأكملها لضمان رحلة سلسة.
@@ -195,7 +227,9 @@
           </div>
           <div class="col-md-4">
             <div class="service-card">
-              <div class="service-icon"><i class="fas fa-home"></i></div>
+              <div class="service-icon">
+                <i class="fas fa-home"></i>
+              </div>
               <h3>الإقامة</h3>
               <p>
                 ابحث عن خيارات سكن آمنة ومريحة بالقرب من الحرم الجامعي في بلد
@@ -207,7 +241,9 @@
         <div class="row mt-4">
           <div class="col-md-4">
             <div class="service-card">
-              <div class="service-icon"><i class="fas fa-language"></i></div>
+              <div class="service-icon">
+                <i class="fas fa-language"></i>
+              </div>
               <h3>دعم اللغة</h3>
               <p>
                 دورات تحضيرية للغة ودعم لمساعدتك على النجاح في دراستك بالخارج.
@@ -324,7 +360,9 @@
                   بدون دعمهم."
                 </div>
                 <div class="testimonial-author">
-                  <div class="author-img"><i class="fas fa-user"></i></div>
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
                   <div>
                     <h5>أحمد محمد</h5>
                     <p>طالب طب، اسطنبول</p>
@@ -340,7 +378,9 @@
                   الطريق."
                 </div>
                 <div class="testimonial-author">
-                  <div class="author-img"><i class="fas fa-user"></i></div>
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
                   <div>
                     <h5>مريم حسن</h5>
                     <p>طالبة هندسة، طرابلس</p>
@@ -355,10 +395,172 @@
                   دعمهم بعد الوصول جعل انتقالي سلسًا وخاليًا من الإجهاد."
                 </div>
                 <div class="testimonial-author">
-                  <div class="author-img"><i class="fas fa-user"></i></div>
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
                   <div>
                     <h5>عمر خالد</h5>
                     <p>طالب إدارة أعمال، أنقرة</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "بفضل اكسترنال اديوكيشن، تم قبولي في جامعة أحلامي في تركيا.
+                  نهجهم الشخصي واهتمامهم بالتفاصيل أحدث فرقًا كبيرًا."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>فاطمة علي</h5>
+                    <p>طالبة علم نفس، إزمير</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "بدت عملية التأشيرة مربكة، لكن فريق اكسترنال اديوكيشن أرشدني
+                  في كل خطوة. الآن أدرس علوم الكمبيوتر في تركيا!"
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>يوسف إبراهيم</h5>
+                    <p>طالب علوم حاسب، اسطنبول</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "كنت غير متأكد من الدراسة في الخارج، لكن اكسترنال اديوكيشن
+                  ساعدني في العثور على البرنامج المثالي في ليبيا. يستمر دعمهم
+                  حتى بعد الوصول."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>نور محمود</h5>
+                    <p>طالبة هندسة معمارية، بنغازي</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "إرشادات المنح الدراسية من اكسترنال اديوكيشن ساعدتني في تأمين
+                  تمويل كامل لشهادتي الهندسية في تركيا. خبرتهم جعلت عملية
+                  التقديم المعقدة بسيطة."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>كريم عبد الرحمن</h5>
+                    <p>طالب هندسة ميكانيكية، أنقرة</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "كطالبة، كنت متوترة بشأن الدراسة في الخارج بمفردي. قدمت
+                  اكسترنال اديوكيشن دعمًا استثنائيًا وساعدتني في العثور على سكن
+                  آمن بالقرب من جامعتي."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>لينا سمير</h5>
+                    <p>طالبة صيدلة، اسطنبول</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "برنامج دعم اللغة ساعدني على تحسين لغتي التركية بسرعة. في غضون
+                  6 أشهر، تمكنت من متابعة المحاضرات بشكل مريح. شكرًا اكسترنال
+                  اديوكيشن!"
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>عمرو صلاح</h5>
+                    <p>طالب علوم حاسب، إزمير</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "لقد تم رفضي من قبل جامعتين قبل الاتصال بـ اكسترنال اديوكيشن.
+                  لقد حددوا المشكلات في طلباتي وساعدوني في الحصول على قبول في
+                  إحدى أفضل الجامعات الليبية."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>حسن محمود</h5>
+                    <p>طالب هندسة مدنية، طرابلس</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "كان التوجيه قبل المغادرة مفيدًا بشكل لا يصدق. كنت أعرف بالضبط
+                  ما يمكن توقعه عندما وصلت إلى تركيا، مما جعل الانتقال أسهل
+                  بكثير."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>داليا وليد</h5>
+                    <p>طالبة إدارة أعمال، اسطنبول</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="testimonial-slide">
+              <div class="testimonial-card">
+                <div class="testimonial-content">
+                  "عندما واجهتني مشكلات في تصريح إقامتي كطالب، ساعدني فريق
+                  اكسترنال اديوكيشن في تركيا في حل كل شيء في غضون أيام. دعمهم
+                  بعد الوصول لا مثيل له."
+                </div>
+                <div class="testimonial-author">
+                  <div class="author-img">
+                    <i class="fas fa-user"></i>
+                  </div>
+                  <div>
+                    <h5>زياد أشرف</h5>
+                    <p>طالب طب، أنقرة</p>
                   </div>
                 </div>
               </div>
@@ -396,6 +598,10 @@
                 مع فريق من المستشارين ذوي الخبرة الذين خاضوا شخصيًا تحديات
                 الدراسة في الخارج ، فإننا نتفهم الاحتياجات الفريدة للطلاب
                 المصريين ونقدم إرشادات مخصصة في كل خطوة على الطريق.
+              </p>
+              <p>
+                نحن متخصصون في التوظيف في مجالات الهندسة والطب والأعمال وغيرها
+                من المجالات على مستويي البكالوريوس والدراسات العليا.
               </p>
               <button class="btn btn-primary mt-3">اعرف المزيد عنا</button>
             </div>
@@ -458,21 +664,39 @@
                 </div>
               </div>
               <div class="contact-item">
-                <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
+                <div class="contact-icon">
+                  <i class="fas fa-phone-alt"></i>
+                </div>
                 <div>
                   <h5>اتصل بنا</h5>
-                  <p dir="ltr">٠١٠٢٠٢٥٥٤٩٧</p>
+                  <p class="mb-1" dir="ltr">٠١٠٢٠٢٥٥٤٩٧</p>
+                  <p class="mb-1" dir="ltr">٠١٥٥٢٦٧٥٥١٨</p>
+                  <p class="mb-1" dir="ltr">٠١١٥٦٨٤٧٠٢٢</p>
+                  <p class="mb-1" dir="ltr">٠١١٠٤٣١٥٦٢٢</p>
                 </div>
               </div>
               <div class="contact-item">
-                <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                <div class="contact-icon">
+                  <i class="fas fa-envelope"></i>
+                </div>
                 <div>
                   <h5>راسلنا عبر البريد الإلكتروني</h5>
                   <p>externaleducation2015@gmail.com</p>
                 </div>
               </div>
               <div class="contact-item">
-                <div class="contact-icon"><i class="fas fa-clock"></i></div>
+                <div class="contact-icon">
+                  <i class="fas fa-file-invoice-dollar"></i>
+                </div>
+                <div>
+                  <h5>التسجيل الضريبي</h5>
+                  <p>٧٦٨-٧٤٣-٠٤٤</p>
+                </div>
+              </div>
+              <div class="contact-item">
+                <div class="contact-icon">
+                  <i class="fas fa-clock"></i>
+                </div>
                 <div>
                   <h5>ساعات العمل</h5>
                   <p>الأحد - الخميس: ٩ صباحًا - ٥ مساءً</p>
@@ -511,6 +735,7 @@
               ></a>
             </div>
           </div>
+
           <div class="col-md-2 mb-4">
             <h5>روابط سريعة</h5>
             <ul class="footer-links">
@@ -521,6 +746,7 @@
               <li><a href="#contact">اتصل بنا</a></li>
             </ul>
           </div>
+
           <div class="col-md-3 mb-4">
             <h5>خدماتنا</h5>
             <ul class="footer-links">
@@ -531,6 +757,7 @@
               <li><a href="#services">إرشادات المنح الدراسية</a></li>
             </ul>
           </div>
+
           <div class="col-md-3 mb-4">
             <h5>معلومات الاتصال</h5>
             <ul class="footer-links">
