handle the scroll

--- a/index-ar.html
+++ b/index-ar.html
@@ -345,6 +345,7 @@
       </div>
     </section>
 
+    <!-- Testimonials Section -->
     <section class="testimonials" id="testimonials">
       <div class="container">
         <div class="section-title">
@@ -566,8 +567,22 @@
               </div>
             </div>
           </div>
+          <!-- Carousel Controls: Arrows -->
+          <button
+            class="carousel-control-prev"
+            id="carouselPrev"
+            aria-label="Previous testimonial"
+          >
+            <i class="fas fa-chevron-left"></i>
+          </button>
+          <button
+            class="carousel-control-next"
+            id="carouselNext"
+            aria-label="Next testimonial"
+          >
+            <i class="fas fa-chevron-right"></i>
+          </button>
         </div>
-        <div class="carousel-dots" id="carouselDots"></div>
       </div>
     </section>
 
