--- a/index-ar.html
+++ b/index-ar.html
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://extrnal-education.vercel.app/file.svg"
+      content="https://extrnal-education.vercel.app/assets/file.svg"
     />
     <meta
       property="og:url"
@@ -37,7 +37,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ar_EG" />
 
-    <link rel="icon" href="./file.svg" />
+    <link rel="icon" href="./assets/file.svg" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <script type="application/ld+json">
       {
@@ -799,6 +799,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
