--- a/index-ar.html
+++ b/index-ar.html
@@ -110,7 +110,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center ms-lg-5" href="#">
           <img
-            src="./file.svg"
+            src="./assets/file.svg"
             alt="External Education Logo"
             class="navbar-logo-svg mx-2"
           />
@@ -182,16 +182,16 @@
     <section class="hero" id="home">
       <div class="container">
         <div class="hero-content">
-          <h1>الدراسة في الخارج بثقة</h1>
-          <p>شريكك الموثوق لمتابعة التعليم العالي في تركيا وليبيا وخارجها</p>
           <div
-            class="mt-4 d-flex flex-column flex-sm-row justify-content-center"
+            class="mb-4 d-flex flex-column flex-sm-row justify-content-center"
           >
-            <button class="btn btn-primary btn-lg ms-sm-2 mb-2 mb-sm-0">
+            <a  href="https://wa.me/201020255497" target="_blank" class="btn btn-primary btn-lg ms-sm-2 mb-2 mb-sm-0">
               ابدأ رحلتك
-            </button>
+            </a>
             <button class="btn btn-outline-light btn-lg">اعرف المزيد</button>
           </div>
+          <h1>الدراسة في الخارج بثقة</h1>
+          <p>شريكك الموثوق لمتابعة التعليم العالي في تركيا وليبيا وخارجها</p>
         </div>
       </div>
     </section>
