--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center ms-lg-5" href="#">
           <img
-            src="./file.svg"
+            src="./assets/file.svg"
             alt="External Education Logo"
             class="navbar-logo-svg mx-2"
           />
@@ -177,19 +177,19 @@
     <section class="hero" id="home">
       <div class="container">
         <div class="hero-content">
+          <div
+            class="mb-5 d-flex flex-column flex-sm-row justify-content-center"
+          >
+            <a  href="https://wa.me/201020255497" target="_blank" class="btn btn-primary btn-lg me-sm-2 mb-2 mb-sm-0">
+              Start Your Journey
+            </a>
+            <button class="btn btn-outline-light btn-lg">Learn More</button>
+          </div>
           <h1>Study Abroad With Confidence</h1>
           <p>
             Your trusted partner for pursuing higher education in Turkey, Libya
             and beyond
           </p>
-          <div
-            class="mt-4 d-flex flex-column flex-sm-row justify-content-center"
-          >
-            <button class="btn btn-primary btn-lg me-sm-2 mb-2 mb-sm-0">
-              Start Your Journey
-            </button>
-            <button class="btn btn-outline-light btn-lg">Learn More</button>
-          </div>
         </div>
       </div>
     </section>
