--- a/index-ar.html
+++ b/index-ar.html
@@ -603,7 +603,7 @@
               <h3>عن اكسترنال اديوكيشن</h3>
               <p>
                 تأسست شركة اكسترنال اديوكيشن في مصر بشغف لتمكين الطلاب ، وهي
-                ترشد الطلاب المصريين إلى فرص التعليم الدولي منذ عام 2010.
+                ترشد الطلاب المصريين إلى فرص التعليم الدولي منذ عام 2017.
               </p>
               <p>
                 مهمتنا هي كسر حواجز التعليم الجيد من خلال ربط الطلاب المصريين
@@ -714,8 +714,7 @@
                 </div>
                 <div>
                   <h5>ساعات العمل</h5>
-                  <p>الأحد - الخميس: ٩ صباحًا - ٥ مساءً</p>
-                  <p>الجمعة والسبت: مغلق</p>
+                  <p>يومياً: ٩ صباحًا - ٥ مساءً</p>
                 </div>
               </div>
             </div>
