--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
               <p>
                 Founded in Egypt with a passion for empowering students,
                 External Education has been guiding Egyptian students to
-                international education opportunities since 2010.
+                international education opportunities since 2017.
               </p>
               <p>
                 Our mission is to break down barriers to quality education by
@@ -717,8 +717,7 @@
                 </div>
                 <div>
                   <h5>Working Hours</h5>
-                  <p>Sunday - Thursday: 9AM - 5PM</p>
-                  <p>Friday & Saturday: Closed</p>
+                  <p> Every Day: 9AM - 5PM</p>
                 </div>
               </div>
             </div>
