--- a/index-ar.html
+++ b/index-ar.html
@@ -37,7 +37,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ar_EG" />
 
-    <link rel="icon" href="./file.svg" />
+    <link rel="icon" href="./assets/file.svg" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <script type="application/ld+json">
       {
@@ -110,7 +110,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center ms-lg-5" href="#">
           <img
-            src="./file.svg"
+            src="./assets/file.svg"
             alt="External Education Logo"
             class="navbar-logo-svg mx-2"
           />
@@ -141,7 +141,7 @@
             ></button>
           </div>
           <div class="offcanvas-body">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" href="#home">الرئيسية</a>
               </li>
@@ -150,6 +150,11 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#services">خدماتنا</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#global-destinations"
+                  >الوجهات الدراسية</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#steps">كيف نعمل</a>
@@ -269,6 +274,89 @@
               </div>
               <h3>الدعم بعد الوصول</h3>
               <p>دعم مستمر بعد وصولك إلى بلدك المضيف لضمان انتقال سلس.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="global-destinations" id="global-destinations">
+      <div class="container">
+        <div class="section-title">
+          <h2>وجهاتنا الدراسية العالمية</h2>
+          <p>اكتشف المرافق والخطوات المتاحة لدراستك في هذه البلدان المثيرة.</p>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>تركيا</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137243.jpg"
+                  alt="الدراسة في تركيا"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>ليبيا</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137240.jpg"
+                  alt="الدراسة في ليبيا"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>اسم الدولة 3</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137241.jpg"
+                  alt="الدراسة في الدولة 3"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>اسم الدولة 4</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137244.jpg"
+                  alt="الدراسة في الدولة 4"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>اسم الدولة 5</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137245.jpg"
+                  alt="الدراسة في الدولة 5"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>اسم الدولة 6</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137246.jpg"
+                  alt="الدراسة في الدولة 6"
+                  class="img-fluid rounded-3"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -743,7 +831,7 @@
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
-                href="https://www.tiktok.com/@externaleducation?_t=ZS-8umyVGogzIe&_r=1"
+                href="https://www.tiktok.com/@externaleducation?_t=ZS-8y8WNxOVA88&_r=1"
                 target="_blank"
                 class="tiktok-icon"
                 ><i class="fab fa-tiktok"></i
@@ -762,14 +850,15 @@
             </ul>
           </div>
 
-          <div class="col-md-3 mb-4">
-            <h5>خدماتنا</h5>
+          <div class="col-md-2 mb-4">
+            <h5>روابط سريعة</h5>
             <ul class="footer-links">
-              <li><a href="#services">القبول الجامعي</a></li>
-              <li><a href="#services">المساعدة في التأشيرة</a></li>
-              <li><a href="#services">الإقامة</a></li>
-              <li><a href="#services">دعم اللغة</a></li>
-              <li><a href="#services">إرشادات المنح الدراسية</a></li>
+              <li><a href="#home">الرئيسية</a></li>
+              <li><a href="#about">من نحن</a></li>
+              <li><a href="#services">خدماتنا</a></li>
+              <li><a href="#global-destinations">الوجهات الدراسية</a></li>
+              <li><a href="#testimonials">آراء الطلاب</a></li>
+              <li><a href="#contact">اتصل بنا</a></li>
             </ul>
           </div>
 
@@ -798,7 +887,12 @@
       </div>
     </footer>
 
+    <div id="imageModal" class="image-modal">
+      <span class="close-button">&times;</span>
+      <img class="modal-content" id="modalImage" />
+      <div id="caption" class="modal-caption"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
