--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:url" content="https://extrnal-education.vercel.app/" />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" href="./file.svg" />
+    <link rel="icon" href="./assets/file.svg" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -42,7 +42,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 
     <script type="application/ld+json">
       {
@@ -105,7 +105,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center ms-lg-5" href="#">
           <img
-            src="./file.svg"
+            src="./assets/file.svg"
             alt="External Education Logo"
             class="navbar-logo-svg mx-2"
           />
@@ -145,6 +145,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#services">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#global-destinations">Destinations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#steps">How We Work</a>
@@ -272,6 +275,92 @@
                 Ongoing support after you arrive in your host country to ensure
                 a smooth transition.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="global-destinations" id="global-destinations">
+      <div class="container">
+        <div class="section-title">
+          <h2>Our Global Study Destinations</h2>
+          <p>
+            Explore the facilities and steps available for your studies in these
+            exciting countries.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>Turkey</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137243.jpg"
+                  alt="Study in Turkey"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>Libya</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137240.jpg"
+                  alt="Study in Libya"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>Country 3 Name</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137241.jpg"
+                  alt="Study in Country 3"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>Country 4 Name</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137244.jpg"
+                  alt="Study in Country 4"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>Country 5 Name</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137245.jpg"
+                  alt="Study in Country 5"
+                  class="img-fluid rounded-3"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="country-card">
+              <h3>Country 6 Name</h3>
+              <div class="country-img-wrapper">
+                <img
+                  src="./assets/6039767437987137246.jpg"
+                  alt="Study in Country 6"
+                  class="img-fluid rounded-3"
+                />
+              </div>
             </div>
           </div>
         </div>
@@ -746,7 +835,7 @@
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <a
-                href="https://www.tiktok.com/@externaleducation?_t=ZS-8umyVGogzIe&_r=1"
+                href="https://www.tiktok.com/@externaleducation?_t=ZS-8y8WNxOVA88&_r=1"
                 target="_blank"
                 class="tiktok-icon"
                 ><i class="fab fa-tiktok"></i
@@ -765,14 +854,15 @@
             </ul>
           </div>
 
-          <div class="col-md-3 mb-4">
-            <h5>Our Services</h5>
+          <div class="col-md-2 mb-4">
+            <h5>Quick Links</h5>
             <ul class="footer-links">
-              <li><a href="#services">University Admission</a></li>
-              <li><a href="#services">Visa Assistance</a></li>
-              <li><a href="#services">Accommodation</a></li>
-              <li><a href="#services">Language Support</a></li>
-              <li><a href="#services">Scholarship Guidance</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#about">About Us</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#global-destinations">Destinations</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
 
@@ -799,8 +889,12 @@
         </div>
       </div>
     </footer>
-
+    <div id="imageModal" class="image-modal">
+      <span class="close-button">&times;</span>
+      <img class="modal-content" id="modalImage" />
+      <div id="caption" class="modal-caption"></div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
