--- a/index.html
+++ b/index.html
@@ -190,7 +190,11 @@
           <div
             class="mb-4 d-flex flex-column flex-sm-row justify-content-center"
           >
-            <a  href="https://wa.me/201020255497" target="_blank" class="btn btn-primary btn-lg ms-sm-2 mb-2 mb-sm-0">
+            <a
+              href="https://wa.me/201020255497"
+              target="_blank"
+              class="btn btn-primary btn-lg ms-sm-2 mb-2 mb-sm-0"
+            >
               ابدأ رحلتك
             </a>
             <button class="btn btn-outline-light btn-lg">اعرف المزيد</button>
@@ -313,11 +317,11 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="country-card">
-              <h3>اسم الدولة 3</h3>
+              <h3>بيلاروسيا</h3>
               <div class="country-img-wrapper">
                 <img
                   src="./assets/6039767437987137241.jpg"
-                  alt="الدراسة في الدولة 3"
+                  alt="الدراسة في بيلاروسيا"
                   class="img-fluid rounded-3"
                 />
               </div>
@@ -325,23 +329,23 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="country-card">
-              <h3>اسم الدولة 4</h3>
+              <h3>اوزباكستان</h3>
               <div class="country-img-wrapper">
                 <img
                   src="./assets/6039767437987137244.jpg"
-                  alt="الدراسة في الدولة 4"
-                  class="img-fluid rounded-3"
+                  alt="الدراسة في اوزباكستان"
+                  class="img- rounded-3"
                 />
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="country-card">
-              <h3>اسم الدولة 5</h3>
+              <h3>قيرغيزستان</h3>
               <div class="country-img-wrapper">
                 <img
                   src="./assets/6039767437987137245.jpg"
-                  alt="الدراسة في الدولة 5"
+                  alt="الدراسة في قيرغيزستان"
                   class="img-fluid rounded-3"
                 />
               </div>
@@ -349,11 +353,11 @@
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="country-card">
-              <h3>اسم الدولة 6</h3>
+              <h3>الاردن</h3>
               <div class="country-img-wrapper">
                 <img
                   src="./assets/6039767437987137246.jpg"
-                  alt="الدراسة في الدولة 6"
+                  alt="الدراسة في الاردن"
                   class="img-fluid rounded-3"
                 />
               </div>
